--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahmudul Hasan</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <nav>
+            <h3 class="site-title">Mah<span class="text-primary">m</span>udul</h3>
+            <ul>
+                <li><a href="Home">Home</a></li>
+                <li><a href="Portfolio">Portfolio</a></li>                
+                <li><button class="btn-primary">Hire me</button></li>
+                
+            </ul>
+        </nav>
+    </header>
+    <!-- end header -->
+    <!-- main -->
+    <main>
+
+    </main>
+    <!-- end main -->
+    <!-- footer -->
+    <footer>
+
+    </footer>
+    <!-- end footer -->
 </body>
 </html>
