bannar section added

--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="header">
         <nav>
             <h3 class="site-title">Mah<span class="text-primary">m</span>udul</h3>
             <ul>
                 <li><a href="Home">Home</a></li>
                 <li><a href="Portfolio">Portfolio</a></li>                
                 <li><button class="btn-primary">Hire me</button></li>
-                
             </ul>
         </nav>
+        <div class="bannar">
+            <div class="bannar-left">
+                <h3 class="bannar-gretting">Hi, I  am</h3>
+                <h1 class="bannar-title">Md. Mahmudul Hasan</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download Resume</button>
+                <button class="btn-primary">Contract</button>
+            </div>
+            <div class="bannar-right">
+                <img src="images/hardy.png" alt="developer image">
+            </div>
+        </div>
     </header>
     <!-- end header -->
     <!-- main -->
