bannar section updeted

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             </ul>
         </nav>
         <div class="bannar">
-            <div class="bannar-left">
+            <div class="bannar-content">
                 <h3 class="bannar-gretting">Hi, I  am</h3>
                 <h1 class="bannar-title">Md. Mahmudul Hasan</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="bannar-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download Resume</button>
                 <button class="btn-primary">Contract</button>
             </div>
-            <div class="bannar-right">
+            
                 <img src="images/hardy.png" alt="developer image">
-            </div>
+            
         </div>
     </header>
     <!-- end header -->
