about section added

--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahmudul Hasan</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <!-- header -->
     <header class="header">
-        <nav>
-            <h3 class="site-title">Mah<span class="text-primary">m</span>udul</h3>
-            <ul>
-                <li><a href="Home">Home</a></li>
-                <li><a href="Portfolio">Portfolio</a></li>                
-                <li><button class="btn-primary">Hire me</button></li>
-            </ul>
-        </nav>
-        <div class="bannar">
-            <div class="bannar-content">
-                <h3 class="bannar-gretting">Hi, I  am</h3>
-                <h1 class="bannar-title">Md. Mahmudul Hasan</h1>
-                <p class="bannar-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download Resume</button>
-                <button class="btn-primary">Contract</button>
-            </div>
-            
-                <img src="images/hardy.png" alt="developer image">
-            
+      <nav>
+        <h3 class="site-title">Mah<span class="text-primary">m</span>udul</h3>
+        <ul>
+          <li><a href="Home">Home</a></li>
+          <li><a href="Portfolio">Portfolio</a></li>
+          <li><button class="btn-primary">Hire me</button></li>
+        </ul>
+      </nav>
+      <div class="bannar">
+        <div class="bannar-content">
+          <h3 class="bannar-gretting">Hi, I am</h3>
+          <h1 class="bannar-title">Md. Mahmudul Hasan</h1>
+          <p class="bannar-text">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download Resume</button>
+          <button class="btn-primary">Contract</button>
         </div>
+        <img class="profile-pic" src="images/hardy.png" alt="developer image" />
+      </div>
     </header>
     <!-- end header -->
     <!-- main -->
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <!-- end main -->
     <!-- footer -->
-    <footer>
-
-    </footer>
+    <footer></footer>
     <!-- end footer -->
-</body>
+  </body>
 </html>
