--- a/index.html
+++ b/index.html
@@ -40,29 +40,44 @@
     <!-- end header -->
     <!-- main -->
     <main>
-        <section class="about">
-            <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-            <div class="about-info-container">
-                <div class="about-info">
-                    <h4 class="info-title">Name:</h4>
-                    <p class="info-description">Md. Mahmudul Hasan</p>
-                </div>
-                <div class="about-info">
-                    <h4 class="info-title">Email:</h4>
-                    <p class="info-description">infomahmudul@gmail.com</p>
-                </div>
-                <div class="about-info">
-                    <h4 class="info-title">Date of birth</h4>
-                    <p class="info-description">1 December 1996</p>
-                </div>
-                <div class="about-info">
-                    <h4 class="info-title">From:</h4>
-                    <p class="info-description">
-                        Natore, Bangladesh</p>
-                </div>
-            </div>
-        </section>
+      <!-- About info -->
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Md. Mahmudul Hasan</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">infomahmudul@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of birth</h4>
+            <p class="info-description">1 December 1996</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">Natore, Bangladesh</p>
+          </div>
+        </div>
+      </section>
+      <!-- end about info -->
+      <section>
+        <div class="what-i-do">
+          <h3 class="section-title">What I do</h3>
+          <p id="what-i-do-description" class="section-description">
+            I have more than 5 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+          </p>
+        </div>
+      </section>
     </main>
     <!-- end main -->
     <!-- footer -->
