--- a/index.html
+++ b/index.html
@@ -138,6 +138,69 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="resume-summery">
+          <h3 class="section-title">A summary of My Resume</h3>
+          <div class="resume-container">
+            <!-- Educational coloumn -->
+            <div class="resume-coloumn">
+              <h2 class="resume-title">My Education</h2>
+              <div class="resume-item">
+                <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                <h4 class="resume-item-subtitle">Harvard University / 2015 - 2017</h4>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  <hr>
+              </div>
+              <div class="resume-item">
+                <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                <h4 class="resume-item-subtitle">Harvard University / 2015 - 2017</h4>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  <hr>
+              </div>
+              <div class="resume-item">
+                <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                <h4 class="resume-item-subtitle">Harvard University / 2015 - 2017</h4>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  <hr>
+              </div>
+            </div>
+            <!-- end educational coloumn -->
+            <!-- experience coloumn -->
+            <div class="resume-coloumn">
+              <h2 class="resume-title">My Experience</h2>
+              <div class="resume-item">
+                <h3 class="resume-item-title">Sr. Font End Developer</h3>
+                <h4 class="resume-item-subtitle">Apple Inc / 2020 - Current</h4>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  <hr>
+              </div>
+              <div class="resume-item">
+                <h3 class="resume-item-title">Jr. Font End Developer</h3>
+                <h4 class="resume-item-subtitle">Dribbble Inc / 2018 - 2022</h4>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  <hr>
+              </div>
+              <div class="resume-item">
+                <h3 class="resume-item-title">HTML Developer</h3>
+                <h4 class="resume-item-subtitle">Adobe Inc / 2017 - 2018</h4>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                  <hr>
+              </div>
+            </div>
+            <!-- end experience coloumn -->
+
+            
+          </div class="resume-download">
+            <button class="btn-primary">Download cv</button>
+        </div>
+        </div>
+      </section>
     </main>
     <!-- end main -->
     <!-- footer -->
