resume section resume download button added

--- a/index.html
+++ b/index.html
@@ -194,10 +194,9 @@
               </div>
             </div>
             <!-- end experience coloumn -->
-
-            
-          </div class="resume-download">
-            <button class="btn-primary">Download cv</button>
+        </div>
+        <div class="resume-download">
+          <button class="btn-primary">Download cv</button>
         </div>
         </div>
       </section>
