--- a/index.html
+++ b/index.html
@@ -146,25 +146,45 @@
             <div class="resume-coloumn">
               <h2 class="resume-title">My Education</h2>
               <div class="resume-item">
-                <h3 class="resume-item-title">Master in Computer Engineering</h3>
-                <h4 class="resume-item-subtitle">Harvard University / 2015 - 2017</h4>
-                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                  <hr>
+                <h3 class="resume-item-title">
+                  Master in Computer Engineering
+                </h3>
+                <h4 class="resume-item-subtitle">
+                  Harvard University / 2015 - 2017
+                </h4>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+                <hr />
               </div>
               <div class="resume-item">
-                <h3 class="resume-item-title">Master in Computer Engineering</h3>
-                <h4 class="resume-item-subtitle">Harvard University / 2015 - 2017</h4>
-                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                  <hr>
+                <h3 class="resume-item-title">
+                  Master in Computer Engineering
+                </h3>
+                <h4 class="resume-item-subtitle">
+                  Harvard University / 2015 - 2017
+                </h4>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+                <hr />
               </div>
               <div class="resume-item">
-                <h3 class="resume-item-title">Master in Computer Engineering</h3>
-                <h4 class="resume-item-subtitle">Harvard University / 2015 - 2017</h4>
-                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                  <hr>
+                <h3 class="resume-item-title">
+                  Master in Computer Engineering
+                </h3>
+                <h4 class="resume-item-subtitle">
+                  Harvard University / 2015 - 2017
+                </h4>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
               </div>
             </div>
             <!-- end educational coloumn -->
@@ -174,36 +194,78 @@
               <div class="resume-item">
                 <h3 class="resume-item-title">Sr. Font End Developer</h3>
                 <h4 class="resume-item-subtitle">Apple Inc / 2020 - Current</h4>
-                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                  <hr>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+                <hr />
               </div>
               <div class="resume-item">
                 <h3 class="resume-item-title">Jr. Font End Developer</h3>
                 <h4 class="resume-item-subtitle">Dribbble Inc / 2018 - 2022</h4>
-                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                  <hr>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+                <hr />
               </div>
               <div class="resume-item">
                 <h3 class="resume-item-title">HTML Developer</h3>
                 <h4 class="resume-item-subtitle">Adobe Inc / 2017 - 2018</h4>
-                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                  to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                  <hr>
+                <p class="resume-item-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
               </div>
             </div>
             <!-- end experience coloumn -->
-        </div>
-        <div class="resume-download">
-          <button class="btn-primary">Download cv</button>
-        </div>
+          </div>
+          <div class="resume-download">
+            <button class="btn-primary">Download cv</button>
+          </div>
         </div>
       </section>
     </main>
     <!-- end main -->
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <div class="footer-coloumn">
+        <h3 class="footer-title">Lets Connect</h3>
+        <p class="footer-description">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="social-links">
+            <a href=""><img src="images/icons/facebook.png" alt="facebook"/></a>
+            <a href=""><img src="images/icons/insta.png" alt="instagram" /></a>
+            <a href=""><img src="images/icons/twitter.png" alt="twitter" /></a>
+        </div>
+      </div>
+      <div class="footer-coloumn">
+        <h3 class="footer-title">Let’s Message me</h3>
+        <form action="">
+          <label for="name">
+            <input type="text" id="name" placeholder="your name" />
+          </label>
+          <br />
+          <label for="email">
+            <input type="email" id="email" placeholder="your email" />
+          </label>
+          <br />
+          <textarea
+            name="Message"
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="your Message"
+          ></textarea>
+          <input class="btn-primary" type="button" value="Submit" />
+        </form>
+      </div>
+    </footer>
     <!-- end footer -->
   </body>
 </html>
