contract me section added

--- a/index.html
+++ b/index.html
@@ -246,15 +246,9 @@
       </div>
       <div class="footer-coloumn">
         <h3 class="footer-title">Let’s Message me</h3>
-        <form action="">
-          <label for="name">
+        <form class="contract-form" action="">          
             <input type="text" id="name" placeholder="your name" />
-          </label>
-          <br />
-          <label for="email">
-            <input type="email" id="email" placeholder="your email" />
-          </label>
-          <br />
+            <input type="email" id="email" placeholder="your email" />          
           <textarea
             name="Message"
             id=""
@@ -262,7 +256,7 @@
             rows="10"
             placeholder="your Message"
           ></textarea>
-          <input class="btn-primary" type="button" value="Submit" />
+          <button class="btn-primary submit-button">Submit</button>
         </form>
       </div>
     </footer>
